--- a/index.html
+++ b/index.html
@@ -2,8 +2,22 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css"/>
+    <title>Matthew Gayhart Resume</title>
 </head>
   <body>
-    <h1>Welcome</h1>
+
+    <header>
+        <ul>
+          <li><a href='education.html'>Education</a></li>
+          <li>Experience</li>
+          <li>Skills</li>
+          <li>Professional Affiliations and Awards</li>
+          <li>Contact Me</li>
+        </ul>
+      </header>
+
+
+    <h1 class="welcome">Welcome to my resmue!</h1>
+    <h3>
   </body>
 </html>
