--- a/education.html
+++ b/education.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Education</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
+
+<body>
+  <div class="top">
+    <h1>Welcome to the Education Section</h1>
+  </div>
+</body>
+
+</html>
