--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         </ul>
       </header>
 
-
-    <h1 class="welcome">Welcome to my resmue!</h1>
-    <h3>
+    <div class='welcome'>
+      <h1>Welcome to my resmue!</h1>
+      <h3>
+    </div>
   </body>
 </html>
